// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`API contract snapshots api/ai search success contract 1`] = `
{
  "body": {
    "ok": true,
    "parsedQuery": {
      "title": "Inception",
    },
    "query": "Inception",
    "results": [
      {
        "confidence": 0.87,
        "id": 1,
        "image": "https://image.tmdb.org/t/p/w500/inception.jpg",
        "media_type": "movie",
        "snippet": "Dream thriller",
        "title": "Inception",
        "type": "movie",
        "url": "https://www.tmdb.org/movie/1",
        "year": "2010",
      },
    ],
    "total": 1,
  },
  "status": 200,
}
`;

exports[`API contract snapshots api/groq missing key contract 1`] = `
{
  "body": {
    "error": {
      "code": "missing_api_key",
      "message": "Groq API key not configured",
      "provider": "groq",
    },
  },
  "status": 400,
}
`;

exports[`API contract snapshots api/mistral missing key contract 1`] = `
{
  "body": {
    "error": {
      "code": "missing_api_key",
      "message": "Mistral API key not configured",
      "provider": "mistral",
    },
  },
  "status": 400,
}
`;

exports[`API contract snapshots api/omdb missing id contract 1`] = `
{
  "body": {
    "error": {
      "code": "missing_imdb_id",
      "message": "Missing IMDB ID parameter (i)",
      "provider": "omdb",
    },
  },
  "status": 400,
}
`;

exports[`API contract snapshots api/openrouter missing key contract 1`] = `
{
  "body": {
    "error": {
      "code": "missing_api_key",
      "message": "OpenRouter API key not configured",
      "provider": "openrouter",
    },
  },
  "status": 400,
}
`;

exports[`API contract snapshots api/person/[id] success contract 1`] = `
{
  "body": {
    "cached": false,
    "career_span": {
      "active_years": 1,
      "end_year": 2010,
      "start_year": 2010,
    },
    "credits_acting": [
      {
        "character": "N/A",
        "id": 1,
        "media_type": "movie",
        "poster_url": "https://image.tmdb.org/t/p/w342/inception.jpg",
        "role": "cast",
        "role_bucket": "acting",
        "title": "Inception",
        "year": 2010,
      },
    ],
    "credits_all": [
      {
        "character": "N/A",
        "id": 1,
        "media_type": "movie",
        "poster_url": "https://image.tmdb.org/t/p/w342/inception.jpg",
        "role": "cast",
        "role_bucket": "acting",
        "title": "Inception",
        "year": 2010,
      },
    ],
    "credits_directing": [],
    "credits_other": [],
    "filmography": [
      {
        "character": "N/A",
        "id": 1,
        "media_type": "movie",
        "poster_url": "https://image.tmdb.org/t/p/w342/inception.jpg",
        "role": "cast",
        "title": "Inception",
        "year": 2010,
      },
    ],
    "known_for_tags": [
      "Acting",
      "Film",
    ],
    "person": {
      "biography": "Director",
      "birthday": "1970-07-30",
      "id": 99,
      "name": "Christopher Nolan",
      "place_of_birth": "London",
      "profile_url": "https://image.tmdb.org/t/p/w342/nolan.jpg",
    },
    "related_people": [],
    "role_distribution": {
      "acting": 1,
      "directing": 0,
      "other": 0,
    },
    "sources": [
      {
        "name": "TMDB",
        "url": "https://www.themoviedb.org/person/99",
      },
    ],
    "top_work": [
      {
        "character": "N/A",
        "id": 1,
        "media_type": "movie",
        "poster_url": "https://image.tmdb.org/t/p/w342/inception.jpg",
        "role": "cast",
        "role_bucket": "acting",
        "title": "Inception",
        "year": 2010,
      },
    ],
  },
  "status": 200,
}
`;

exports[`API contract snapshots api/query missing query contract 1`] = `
{
  "body": {
    "error": "Missing q",
    "error_code": "missing_query",
    "ok": false,
  },
  "status": 400,
}
`;

exports[`API contract snapshots api/resolveEntity success contract 1`] = `
{
  "body": {
    "cached": false,
    "candidates": [
      {
        "id": 11,
        "name": "Inception",
        "score": 0.816,
        "type": "movie",
      },
      {
        "id": 99,
        "name": "Christopher Nolan",
        "score": 0.164,
        "type": "person",
      },
    ],
    "chosen": {
      "id": 11,
      "name": "Inception",
      "type": "movie",
    },
    "confidence_band": "confident",
    "intent": {
      "is_person_focused": false,
      "requested_role": "any",
    },
    "ok": true,
    "query": "Inception",
    "shortlisted": [
      {
        "confidence": 0.164,
        "id": 99,
        "known_for_titles": [],
        "name": "Christopher Nolan",
        "popularity": 20,
        "role_match": "neutral",
        "score": 0.164,
        "type": "person",
      },
    ],
    "type": "movie",
  },
  "status": 200,
}
`;

exports[`API contract snapshots api/tmdb missing endpoint contract 1`] = `
{
  "body": {
    "error": {
      "code": "missing_endpoint",
      "message": "Missing endpoint parameter",
      "provider": "tmdb",
    },
  },
  "status": 400,
}
`;

exports[`API contract snapshots api/websearch success contract 1`] = `
{
  "body": {
    "cached": false,
    "ok": true,
    "query": "Inception",
    "results": {
      "web": [
        {
          "snippet": "Great movie",
          "title": "Inception review",
          "url": "https://example.com/inception",
        },
      ],
    },
    "total": 1,
  },
  "status": 200,
}
`;
